--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
     "name": "@sagemodeninja/design-token-provider",
-    "version": "0.1.0",
-    "description": "",
+    "version": "0.1.1-alpha.5",
+    "description": "Manage design tokens in your web applications.",
     "main": "dist/design-token-provider.js",
-    "types": "@types/design-token-provider.d.ts",
+    "types": "src/@types/design-token-provider.d.ts",
     "files": [
         "dist",
-        "@types"
+        "src/@types"
     ],
     "scripts": {
         "build:dev": "webpack --mode=development",
